cmake_minimum_required(VERSION 3.26)
project(lab8_9)

set(CMAKE_CXX_STANDARD 17)

add_executable(lab8_9 main.cpp
        AgentieService.h
        AgentieService.cpp
        CosOferte.h
        CosOferte.cpp
        Errors.h
        Oferta.h
        Oferta.cpp
        OfertaRepo.h
        OfertaRepo.cpp
        RepoLab.cpp
        Undo.h
        Validator.h
        Validator.cpp
        consola.h
        consola.cpp
        teste.h
        teste.cpp
        AgentieService.cpp
        AgentieService.cpp
        AgentieService.h)
